--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,8 @@ name: brew test-bot
 on:
   push:
     branches: main
-  pull_request: []
+  pull_request: 
+    branches: main
 
 jobs:
   test-bot:
